# o2-tatneft

./: .flake8  .gitignore  README.md  install.sh  pyproject.toml  start.sh
.github/workflows/: workflow.yml
src/: .env.example  db.sql
src/limit_parser/: manage.py
src/limit_parser/app/: models.py  serializers.py  viewsets.py
src/limit_parser/app/migrations/: 0001_initial.py
src/limit_parser/app/services/: pw.py  random_number.py
src/limit_parser/limit_parser/: asgi.py  settings.py  urls.py  wsgi.py
src/number_sender/: main.py
src/number_sender/models/: card.py
src/number_sender/settings/: config.py  log.py
src/o2_site/: gunicorn.conf.py  manage.py
src/o2_site/backend/: error_messages.py  forms.py  managers.py  models.py  views.py  viewsets.py
src/o2_site/backend/management/commands/: startmonthlyparsing.py
src/o2_site/backend/migrations/: 0001_initial.py
src/o2_site/backend/services/: azs_list.py  credentials.py  limit_parser.py  logout.py  map.py  password_reset.py  responses.py  rss.py  signin.py  signup.py
src/o2_site/backend/utils/: dt.py  excel.py  price.py  programs_data.py
src/o2_site/frontend/: index.html  package-lock.json  package.json
src/o2_site/frontend/src/: App.jsx  index.jsx  settings.js
src/o2_site/frontend/src/components/: Layout.jsx  Map.jsx  ProfilePage.jsx  SigninPage.jsx  SignupPage.jsx
src/o2_site/frontend/src/styles/: App.module.css  Map.module.css  ProfilePage.module.css  SigninPage.module.css  (+1 more)
src/o2_site/o2_site/: asgi.py  settings.py  urls.py  wsgi.py
src/project_config/: envs.py  log.py
(+10 files in other folders)
