[tool.poetry]
name = "o2-tatneft"
version = "0.1.0"
description = ""
authors = ["rafailka-m <rafayt323@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
djangorestframework = "^3.14.0"
folium = "^0.14.0"
pandas = "^1.5.3"
openpyxl = "^3.1.2"
playwright = "^1.32.1"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
httpx = "^0.23.3"
xlrd = "^2.0.1"
numpy = "^1.24.2"
schedule = "^1.1.0"
progressbar2 = "^4.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
